Fixed an issue where ChapterListItem would overflow if the name was too large.

--- a/src/admin/story-view/view/containers/SequenceTabContainer.module.scss
+++ b/src/admin/story-view/view/containers/SequenceTabContainer.module.scss
@@ -6,6 +6,7 @@
     flex: 1 1;
     margin-top: 24px;
     margin-right: 10px;
+    overflow: hidden;
   }
 
   .sequencesTable {
